[gd_scene load_steps=12 format=3 uid="uid://cptrqxvvxtatd"]

[ext_resource type="Script" path="res://enemy scenes/basicflightscript.gd" id="1_ae3e0"]
[ext_resource type="Texture2D" uid="uid://dtjoxob6xetk6" path="res://kirbySprites/enemy/brontoburt.png" id="2_hshi8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uh2er"]
size = Vector2(14, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ikp8u"]
size = Vector2(48, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8q8tf"]
size = Vector2(21, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_la7fr"]
size = Vector2(101, 95.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_a70yp"]
atlas = ExtResource("2_hshi8")
region = Rect2(22, 0, 22, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_gecl6"]
atlas = ExtResource("2_hshi8")
region = Rect2(44, 0, 22, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5yid"]
atlas = ExtResource("2_hshi8")
region = Rect2(66, 0, 22, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbnxx"]
atlas = ExtResource("2_hshi8")
region = Rect2(0, 0, 22, 22)

[sub_resource type="SpriteFrames" id="SpriteFrames_kvmmi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a70yp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gecl6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5yid")
}],
"loop": true,
"name": &"default",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbnxx")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}]

[node name="brontoburt" type="CharacterBody2D" groups=["mobs", "suckable"]]
collision_layer = 2
floor_stop_on_slope = false
floor_constant_speed = true
floor_max_angle = 0.0
floor_snap_length = 0.0
script = ExtResource("1_ae3e0")

[node name="hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_uh2er")
debug_color = Color(0.890196, 0.317647, 0.196078, 0.419608)

[node name="walldetectX" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="walldetectX"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_ikp8u")
debug_color = Color(0.686275, 0.494118, 0.172549, 0.419608)

[node name="walldetectY" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="walldetectY"]
position = Vector2(1.45455e-05, -6.5)
rotation = 1.5708
shape = SubResource("RectangleShape2D_8q8tf")
debug_color = Color(0.662745, 0.513726, 0.0705882, 0.419608)

[node name="playerDetect" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerDetect"]
shape = SubResource("RectangleShape2D_la7fr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_kvmmi")
autoplay = "default"
frame_progress = 0.713554

[node name="fliptimer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="walldetectX" to="." method="_on_walldetect_x_body_entered"]
[connection signal="body_entered" from="walldetectY" to="." method="_on_walldetect_y_body_entered"]
[connection signal="body_entered" from="playerDetect" to="." method="_on_player_detect_body_entered"]
[connection signal="body_exited" from="playerDetect" to="." method="_on_player_detect_body_exited"]
[connection signal="timeout" from="fliptimer" to="." method="_on_fliptimer_timeout"]
